--- a/super23/login.css
+++ b/super23/login.css
@@ -1,87 +1,48 @@
 body {
-  background-color: #000;
-  color: #fff;
-  font-family: 'Arial', sans-serif;
+  background-color: #F8F7F3;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 form {
-  position:absolute;
-  width: 300px;
+  width: 50%;
   margin: 0 auto;
-  padding: 20px;
-  background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 10px;
-  margin-top: 100px;
-  top: 10%;
-  left: 35%;
-  box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+  padding-top: 100px;
+}
+
+table {
+  width: 100%;
+}
+
+th {
+  background-color: #FF6000;
+  color: #F8F7F3;
+  padding: 10px;
+  text-align: center;
+}
+
+td {
+  padding: 10px;
 }
 
 input[type="text"],
 input[type="password"] {
   width: 100%;
-  padding: 10px;
+  padding: 8px;
   margin-bottom: 10px;
-  border: 1px solid #fff;
-  background-color: rgba(255, 255, 255, 0.1);
-  color: #fff;
-  border-radius: 5px;
+  box-sizing: border-box;
 }
 
-input[type="submit"] {
-  width: 100%;
-  padding: 10px;
-  background-color: #FFD700;
-  /* Cor dourada para o botão */
+#Enviar {
+  background-color: #FF6000;
+  color: #F8F7F3;
+  padding: 10px 20px;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
-  color: #000;
-  font-weight: bold;
+  font-size: 16px;
 }
 
-input[type="submit"]:hover {
-  background-color: #C0C0C0;
-  /* Cor cinza quando o botão é hover */
+#Enviar:hover {
+  background-color: #403D38;
 }
-
-th {
-  color: #FFD700;
-  /* Cor dourada para o cabeçalho da tabela */
-}
-
- #star {
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   background-color: #000;
-   /* Cor de fundo do céu */
- }
-
- .star {
-   position: absolute;
-   width: 1px;
-   height: 1px;
-   background-color: #fff;
-   /* Cor das estrelas */
-   opacity: 0.5;
-   /* Opacidade das estrelas */
-   animation: twinkle 1.5s infinite;
-   /* Animação para o brilho das estrelas */
- }
-
- @keyframes twinkle {
-   0% {
-     opacity: 0.5;
-   }
-
-   50% {
-     opacity: 1;
-   }
-
-   100% {
-     opacity: 0.5;
-   }
- }
