--- a/super23/Css/login.css
+++ b/super23/Css/login.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F8F7F3;
+  background-color: #f7cda6;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -9,9 +9,11 @@ form {
   width: 50%;
   margin: 0 auto;
   padding-top: 100px;
+  
 }
 
 table {
+  background-color: #F8F7F3;
   width: 100%;
 }
 
